<resources>
    <string name="app_name">smart attendance</string>
    <string name="server_client_id">197392019228-d0n763iqtt9hfoahuqmme50aqeu8ausm.apps.googleusercontent.com</string>
    <string name="logout">Logout</string>
    <string name="scan_qr">Scan QR</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="courses">Courses</string>
    <string name="sessions">Sessions</string>
    <string name="attended">Attended</string>
    <string name="datetime">DateTime</string>
    <string name="total_sessions">Total Sessions: %1$d</string>
    <string name="attended_sessions">Attended Sessions: %1$d</string>
    <string name="select_images">Select Images</string>
    <string name="submit_images">Submit Images</string>
</resources>